# mp-clone

./: .gitignore
app/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
app/src/: App.tsx  electronAPI.ts  main.tsx
app/src/assets/models/: teapot.glb
app/src/components/: GameContainer.tsx  ThreeContainer.tsx
app/src/game/: game.ts  models.ts  resources.ts  scene.ts  textures.ts
app/src/models/: error.ts  payload.ts  player.ts
app/src/networking/: client.ts
app/src/pages/: GamePage.tsx  JoinPage.tsx  LobbyPage.tsx  MainPage.tsx
app/src/store/: isElectron.ts  useIP.ts  useIPAddress.ts  useJoinStatus.ts  usePlayer.ts
app/src/three/: createScene.ts
electron/: package.json  pnpm-lock.yaml
electron/src/: main.ts  preload.ts
server/: CMakeLists.txt  build.sh
server/src/: logger.cpp  logger.h  main.cpp
